--- a/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
+++ b/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <RootNamespace>ACT.Interfaces</RootNamespace>
+    <RootNamespace>ACT.Core.Interfaces</RootNamespace>
     <ApplicationIcon>ACT_Interfaces.ico</ApplicationIcon>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <BaseOutputPath>D:\IVolt_Releases\ACT-Interfaces</BaseOutputPath>
@@ -22,10 +22,11 @@
     <PackageTags>.NET 6, Interface Library, ACT Library</PackageTags>
     <PackageReleaseNotes>Initial Conversion Of .NET Framework To .NET 6</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>2.0.3</AssemblyVersion>
-    <FileVersion>2.0.3</FileVersion>
+    <AssemblyVersion>2.0.4</AssemblyVersion>
+    <FileVersion>2.0.4</FileVersion>
     <PackageLicenseExpression>  GPL-3.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <AssemblyName>ACT_Interfaces</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -48,6 +49,15 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="WebServices\GamersGather\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
