--- a/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
+++ b/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <RootNamespace>ACT.Core.Interfaces</RootNamespace>
@@ -11,7 +11,7 @@
     <SignAssembly>True</SignAssembly>
     <ErrorReport>none</ErrorReport>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>2.0.3</Version>
+    <Version>2.0.6</Version>
     <Authors>IVolt, Mark Alicz, Darkbit</Authors>
     <Description>Full List of Interfaces</Description>
     <Copyright>2020-2021 IVolt, LLC</Copyright>
@@ -20,10 +20,10 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/InspiredVoltage-IVolt/ACT_Interfaces</RepositoryUrl>
     <PackageTags>.NET 6, Interface Library, ACT Library</PackageTags>
-    <PackageReleaseNotes>Initial Conversion Of .NET Framework To .NET 6</PackageReleaseNotes>
+    <PackageReleaseNotes>Modified some Core Interfaces to add machine specific and user spacific protection.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>2.0.4</AssemblyVersion>
-    <FileVersion>2.0.4</FileVersion>
+    <AssemblyVersion>2.0.6</AssemblyVersion>
+    <FileVersion>2.0.6</FileVersion>
     <PackageLicenseExpression>  GPL-3.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <AssemblyName>ACT_Interfaces</AssemblyName>
@@ -49,10 +49,6 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WebServices\GamersGather\" />
   </ItemGroup>
 
   <ItemGroup>
