--- a/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
+++ b/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
@@ -11,7 +11,7 @@
     <SignAssembly>True</SignAssembly>
     <ErrorReport>none</ErrorReport>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>2.1.5</Version>
+    <Version>2.1.7</Version>
     <Authors>IVolt, Mark Alicz, Darkbit</Authors>
     <Description>Full List of Interfaces</Description>
     <Copyright>2020-2021 IVolt, LLC</Copyright>
@@ -22,8 +22,8 @@
     <PackageTags>.NET 6, Interface Library, ACT Library</PackageTags>
     <PackageReleaseNotes>Modified some Core Interfaces to add machine specific and user spacific protection.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>2.1.5</AssemblyVersion>
-    <FileVersion>2.1.5</FileVersion>
+    <AssemblyVersion>2.1.7</AssemblyVersion>
+    <FileVersion>2.1.7</FileVersion>
     <PackageLicenseExpression>  GPL-3.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <AssemblyName>ACT_Interfaces</AssemblyName>
@@ -82,6 +82,7 @@
   <ItemGroup>
     <PackageReference Include="ACT_Enums" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
@@ -89,5 +90,7 @@
   <ItemGroup>
     <Folder Include="Types\ManagerSupport\" />
   </ItemGroup>
+
+  <Import Project="..\ACT_Interfaces_Shared_Project\ACT_Interfaces_Shared_Project.projitems" Label="Shared" />
 
 </Project>
