--- a/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
+++ b/ACT_Interfaces/ACT_Interfaces_Library/ACT_Interfaces_Library.csproj
@@ -11,7 +11,7 @@
     <SignAssembly>True</SignAssembly>
     <ErrorReport>none</ErrorReport>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>2.1.8</Version>
+    <Version>2.1.9</Version>
     <Authors>IVolt, Mark Alicz, Darkbit</Authors>
     <Description>Full List of Interfaces</Description>
     <Copyright>2020-2021 IVolt, LLC</Copyright>
@@ -22,8 +22,8 @@
     <PackageTags>.NET 6, Interface Library, ACT Library</PackageTags>
     <PackageReleaseNotes>Modified some Core Interfaces to add machine specific and user spacific protection.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <AssemblyVersion>2.1.8</AssemblyVersion>
-    <FileVersion>2.1.8</FileVersion>
+    <AssemblyVersion>2.1.9</AssemblyVersion>
+    <FileVersion>2.1.9</FileVersion>
     <PackageLicenseExpression>  GPL-3.0-only</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <AssemblyName>ACT_Interfaces</AssemblyName>
@@ -46,13 +46,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ARM|ARM64'">
     <Optimize>True</Optimize>
-    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ARMDebug|ARM64'">
     <Optimize>False</Optimize>
-    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <FileAlignment>4096</FileAlignment>
   </PropertyGroup>
 
@@ -73,13 +73,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="M:\Shared drives\Assets\__IVOLT_ALL_MEDIA-Assets\IVolt_Product_Images\ACT\ACT_Interfaces_Library\ACT_Common_Icon.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="ACT_Enums" Version="2.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.15" />
@@ -92,6 +85,13 @@
     <Folder Include="Encoding\" />
     <Folder Include="Runtime\" />
     <Folder Include="Types\ManagerSupport\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\ACT_Resources\Resources\Assets\Icons\ACT_Common_Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
